BUG#14019 : group by converts literal string to column name    When resolving unqualified name references MySQL was not    checking what is the item type for the reference. Thus    e.g a string literal item that has by convention a name    equal to its string value will also work as a reference to    a SELECT list item or a table field.    Fixed by allowing only Item_ref or Item_field to referenced by    (unqualified) name.

mysql-test/r/func_gconcat.result:
  Bug #14019: group by converts literal string to column name
   - removed undeterministic testcase : order by a constant 
     means no order.
mysql-test/r/group_by.result:
  Bug #14019: group by converts literal string to column name
   - test case
mysql-test/t/func_gconcat.test:
  Bug #14019: group by converts literal string to column name
   - removed undeterministic testcase : order by a constant 
     means no order.
mysql-test/t/group_by.test:
  Bug #14019: group by converts literal string to column name
   - test case
sql/sql_base.cc:
  Bug #14019: group by converts literal string to column name
   - resolve unqualified by name refs only for real references